*SVN*

* Added -e/--environment option to script/runner #1408 [fbeausoleil@ftml.net]

* Modernize the scaffold generator to use the simplified render and test methods and to change style from @params["id"] to params[:id].  #1367

* Added graceful exit from pressing CTRL-C during the run of the rails command #1150 [Caleb Tennis]

* Allow graceful exits for dispatch.fcgi processes by sending a SIGUSR1. If the process is currently handling a request, the request will be allowed to complete and then will terminate itself. If a request is not being handled, the process is terminated immediately (via #exit). This basically works like restart graceful on Apache. [Jamis Buck]

* Made dispatch.fcgi more robust by catching fluke errors and retrying unless its a permanent condition. [Jamis Buck]

* Added console --profile for profiling an IRB session #1154 [bitsweat]

* Changed console_sandbox into console --sandbox #1154 [bitsweat]


*0.12.1* (20th April, 2005)

* Upgraded to Active Record 1.10.1, Action Pack 1.8.1, Action Mailer 0.9.1, Action Web Service 0.7.1


*0.12.0* (19th April, 2005)

* Fixed that purge_test_database would use database settings from the development environment when recreating the test database #1122 [rails@cogentdude.com]

* Added script/benchmarker to easily benchmark one or more statement a number of times from within the environment. Examples:

    # runs the one statement 10 times
    script/benchmarker 10 'Person.expensive_method(10)'
    
    # pits the two statements against each other with 50 runs each
    script/benchmarker 50 'Person.expensive_method(10)' 'Person.cheap_method(10)'

* Added script/profiler to easily profile a single statement from within the environment. Examples:

    script/profiler 'Person.expensive_method(10)'
    script/profiler 'Person.expensive_method(10)' 10 # runs the statement 10 times

* Added Rake target clear_logs that'll truncate all the *.log files in log/ to zero #1079 [Lucas Carlson]
